# sucrose

./: .gitignore  README.md  pyproject.toml  setup.py
example/: config.yaml  train.py
src/sucrose/: __init__.py  counter.py  post.py  sucrose_logger.py
src/sucrose/config/: __init__.py  callableconf.py  configs.py  conftools.py
src/sucrose/project/: __init__.py  ckpt.py  logs.py  project.py  scenario.py
sucrose/: __init__.py  ckpt.py  config.py  const.py  header.py  logger.py  logs.py  model_config.py  project.py  sucrose_logger.py  utils.py
sucrose/config/: __init__.py  callableconf.py
sucrose/project/: __init__.py  ckpt.py  project.py
