[project]
name = "sucrose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mualani", email = "zhengyy0621@foxmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.24,<0.9.0"]
build-backend = "uv_build"
